initial website push

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.svg" />
 
-  <title>Business | Bootstrap 5 Business Template</title>
+  <title>Prodigal AI | Customized AI software solutions</title>
 
   <link rel="shortcut icon" href="../assets/images/favicon.svg" type="image/svg" />
 
